k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: db
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: config-docker-env
          image: postgres:15-alpine
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $POSTGRES_USER -d $POSTGRES_DB
            failureThreshold: 20
            periodSeconds: 5
          name: db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data-volume
      restartPolicy: Always
      volumes:
        - name: db-data-volume
          persistentVolumeClaim:
            claimName: db-data-claim
