k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 20
            periodSeconds: 5
          volumeMounts:
            - mountPath: /data
              name: redis-data-volume
      restartPolicy: Always
      volumes:
        - name: redis-data-volume
          persistentVolumeClaim:
            claimName: redis-data-claim
