k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: docker-cred
      containers:
        - name: web
          image: carlosramirez0/rede-social-nite:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /misskey/files
              name: web-claim0
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
