k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  selector:
    io.kompose.service: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
