k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socialnite-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: "le"
    traefik.ingress.kubernetes.io/router.middlewares: default-limit-100m@kubernetescrd
spec:
  tls:
    - hosts:
        - https://radiologically-nongenerative-lillyana.ngrok-free.dev
  rules:
    - host: https://radiologically-nongenerative-lillyana.ngrok-free.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
